--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to my webpage</h1>
+    <h2>Another text</h2>
     Hello World!
     This another line
     Second line
